--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.8.1",
     "randomized-string": "^1.2.6",
     "react": "^18.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
