--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,13 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "react/no-array-index-key": "off",
+    "react/prop-types": "off",
+    "camelcase": "off",
+    "comma-dangle": "off",
+    "object-curly-newline": "off"
+
   },
   "ignorePatterns": [
     "dist/",
