fixed linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,8 +23,8 @@
     "react/prop-types": "off",
     "camelcase": "off",
     "comma-dangle": "off",
-    "object-curly-newline": "off"
-
+    "object-curly-newline": "off",
+    "no-underscore-dangle": "off"
   },
   "ignorePatterns": [
     "dist/",
